--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-      path: test
+      with:
+        path: test
 
     - uses: ruby/setup-ruby@v1
       with:
