--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        path: test
+        path: ./tests
 
     - uses: ruby/setup-ruby@v1
       with:
