--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,4 @@ jobs:
         bundler-cache: true
 
     - name: bundle install
-      run: pwd; cd tests; pwd; bundle install
+      run: pwd && cd ./tests && pwd && bundle install
