--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
         working-directory: ./tests
 
     - name: run bashcov
-      run: bundle exec bashcov setuper
+      run: bundle exec bashcov ../setuper
       working-directory: ./tests
