--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      BUNDLE_GEMFILE: tests/Gemfile
+      BUNDLE_GEMFILE.lock: tests/Gemfile.lock
 
     steps:
     - uses: actions/checkout@v3
@@ -18,8 +21,6 @@ jobs:
       with:
         ruby-version: '3.3'
         bundler-cache: true
-        working-directory: ./tests
 
     - name: run bashcov
-      run: bundle exec bashcov ../setuper
-      working-directory: ./tests
+      run: bundle exec bashcov ./setuper
