--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,8 @@ jobs:
         mkdir setuper_${{ github.ref_name }}/usr/lib/
         mkdir setuper_${{ github.ref_name }}/usr/bin/
         mv build/debian_control setuper_${{ github.ref_name }}/DEBIAN/control
-        mv setupper setuper_${{ github.ref_name }}/usr/bin/
-        mv lib/ setuper_${{ github.ref_name }}/usr/lib/setupper
+        mv setuper setuper_${{ github.ref_name }}/usr/bin/
+        mv lib/ setuper_${{ github.ref_name }}/usr/lib/setuper
         dpkg-deb --build setuper_${{ github.ref_name }}
 
     - name: Upload DEB
