--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         dpkg-deb --build setuper_${{ github.ref_name }}
 
     - name: Upload DEB
-      uses: actions/upload-artifact@v2
-      if: startsWith(github.ref, 'refs/tags/')
+      uses: actions/upload-artifact@v4
       with:
-        files: setuper_${{ github.ref_name }}.deb
+        name: setuper.deb
+        path: setuper_${{ github.ref_name }}.deb
