--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,4 +37,4 @@ jobs:
 
     - name: Build arch
       run: |
-          docker run --rm --volume $(pwd):/setuper --workdir /setuper archlinux:latest /bin/bash -c "echo /etc/os-release"
+          docker run --rm --volume $(pwd):/setuper --workdir /setuper archlinux:latest /bin/bash -c "cat /etc/os-release"
