--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         cp setuper ./build/arch/
         cp -r lib/ ./build/arch/
-        docker run --rm --volume ./build/arch:/build --workdir /setuper archlinux:latest /bin/bash -c "/build/build.sh"
+        docker run --rm --volume ./build/arch:/build --workdir /setuper --user 1000:1000 archlinux:latest /bin/bash -c "/build/build.sh"
 
     - name: Upload arch
       uses: softprops/action-gh-release@v2
