fix version name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,9 +26,9 @@ jobs:
 
     - name: Upload DEB
       uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: setuper_${{ github.ref_name }}.deb
+
   arch:
     runs-on: ubuntu-latest
     container:
@@ -62,6 +62,5 @@ jobs:
 
     - name: Upload arch
       uses: softprops/action-gh-release@v2
-      if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: ./build/arch/setuper_${{ github.ref_name }}-1-any.pkg.tar.zst
+        files: ./build/arch/setuper_${GITHUB_REF_NAME#v}-1-any.pkg.tar.zst
