--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,13 @@ jobs:
 
         ls -la
 
+    - name: Parse version
+      id: parse_version
+      run: |
+          PARSED_VERSION=${GITHUB_REF_NAME#v}
+          echo "PARSED_VERSION=${PARSED_VERSION}" >> $GITHUB_ENV
+
     - name: Upload arch
       uses: softprops/action-gh-release@v2
       with:
-        files: ./build/arch/setuper_${{GITHUB_REF_NAME#v}}-1-any.pkg.tar.zst
+        files: ./build/arch/setuper_${{PARSED_VERSION}}-1-any.pkg.tar.zst
