--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,4 +63,4 @@ jobs:
     - name: Upload arch
       uses: softprops/action-gh-release@v2
       with:
-        files: ./build/arch/setuper_v${{PARSED_VERSION}}-1-any.pkg.tar.zst
+        files: ./build/arch/setuper_v${{ github.ref_name }}-1-any.pkg.tar.zst
