--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Upload DEB
       uses: softprops/action-gh-release@v2
       with:
-        files: ./build/debian/setuper.deb
+        files: setuper.deb
 
   arch:
     runs-on: ubuntu-latest
@@ -57,4 +57,4 @@ jobs:
     - name: Upload arch
       uses: softprops/action-gh-release@v2
       with:
-        files: ./build/arch/setuper.pkg.tar.zst
+        files: build/arch/setuper.pkg.tar.zst
