--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,8 @@ jobs:
         VERSION=${VERSION:1}
         sed -i "s/VERSION/$VERSION/" build/arch/PKGBUILD
         mkdir -p build/arch/src
-        mv setuper build/arch/src/
-        mv lib/ build/arch/src/
+        cp -r setuper build/arch/src/
+        cp -r lib/ build/arch/src/
         cd build/arch
         useradd --no-create-home build
         chown -R build:build ./
